--- a/eureka-client-consumer/pom.xml
+++ b/eureka-client-consumer/pom.xml
@@ -48,7 +48,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-sleuth</artifactId>
+			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-bus-amqp</artifactId>
 		</dependency>
 
 		<dependency>
