adding random eureka-id to the authors service

--- a/eureka-client-random-author/src/main/resources/application.properties
+++ b/eureka-client-random-author/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
+eureka.instance.instance-id=${random.uuid}
 server.port=${PORT:${SERVER_PORT:0}}
 authors=Napoleon Bonaparte:Bertrand Russell:Chessmaster Savielly Grigorievitch Tartakower:Golda Meir:Abba Eban
 spring.application.name=author-generator
